# github-trust-lens

./: LICENSE  README.md  pyproject.toml
tests/: test_analyzer.py  test_checks.py  test_maintainers.py  test_scoring.py
trust_lens/: __init__.py  __main__.py  analyzer.py  checks.py  github_client.py  maintainers.py  reporting.py  scoring.py  web.py
trust_lens/static/: app.css  app.js  index.html
