[project]
name = "github-repo-trust-lens"
version = "0.1.0"
description = "Complementary GitHub repository trust analysis that avoids OpenSSF Scorecard checks."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
trust-lens = "trust_lens.__main__:main"
trust-lens-ui = "trust_lens.web:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
